--- a/lab-3/ll-3-overview-presentation.html
+++ b/lab-3/ll-3-overview-presentation.html
@@ -4,7 +4,7 @@
     <title>Machine Learning Learning Lab 3: Model Tuning</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2022-07-12" />
+    <meta name="date" content="2022-07-14" />
     <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
@@ -37,7 +37,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning Learning Lab 3: Model Tuning
 ----
 ### **Dr. Joshua Rosenberg**
-### July 12, 2022
+### July 14, 2022
 
 ---
 
@@ -56,7 +56,7 @@ class: clear, title-slide, inverse, center, top, middle
 ## Part 1: Core Concepts
 ### Model tuning
 - hyperparameters
-- random fores
+- random forest
 
 ]
 
@@ -65,7 +65,7 @@ class: clear, title-slide, inverse, center, top, middle
 ## Part 2: R Code-Along
 ### NGSSchat
 - NGSS and transactional and substantive (again)
-- Using a grid to estimate tuning parameters
+- Using a grid (grid search) to estimate tuning parameters
 
 ]
 
@@ -80,17 +80,17 @@ class: clear, inverse, center, middle
 # Discussion
 
 .pull-left[
+
 ### Turn to an elbow partner and discuss:
 
-- What do you think the benefits of fitting a more complex model may be?
-- Which more complex models - if any - are you familiar with?
-- What "costs" or downsides - if any - might accompany the estimation of a more complex model?
+- What do you think the benefits (and/or costs) of fitting a more complex model may be?
+- What ideas do you _now_ have regarding your use of ML (or another methodological approach)?
 
 ]
 
 .pull-right[
 
-&lt;img src="img/joro-pointing.jpeg" width="75%" /&gt;
+&lt;img src="img/joro-cycle.jpeg" width="100%" /&gt;
 
 ]
 ---
@@ -188,6 +188,8 @@ This isn't just for beginners or those of us in education; [most spam filters us
 
 - How (in)correct our models' (algorithms') predictions are
 
+--
+
 - Models with high bias can fail to capture important relationships--they can be *under-fit* to our data
 
 - In short, how well our model reflects the patterns in the data
@@ -200,7 +202,10 @@ This isn't just for beginners or those of us in education; [most spam filters us
 
 - *Definition*: Using a different sample of data, the difference in `\(\hat{y}\)` values
 
-- How sensitive our predictions are to the specific sample on which we trained the model 
+- How sensitive our predictions are to the specific sample on which we trained (and tested) the model 
+
+--
+
 - Models with high variance can fail to predict different data well--they can be *over-fit* to our data
 
 - In short, how stable the predictions of our model are
@@ -222,7 +227,7 @@ This isn't just for beginners or those of us in education; [most spam filters us
 # Aside: Random forests and classification trees
 
 - *Random forests* are extensions of classification trees
-- _Classification trees_ are a type of algorithm that - at their core - use conditional logic ("if-then" statements) in a _nested_ manner
+- _Classification trees_ are a type of algorithm that use conditional logic ("if-then" statements) in a _nested_ manner
     - For instance, here's a _very, very_ simple tree (from [APM](https://link.springer.com/book/10.1007/978-1-4614-6849-3)):
 
 
@@ -241,26 +246,37 @@ As you can imagine, with many variables, these trees can become very complex
 
 # Random forests
 
-- Random forest is an extension of decision tree modeling, whereby a collection of decision trees are simultaneously estimated ("grown") and are evaluated based on out-of-sample predictive accuracy
-- Random forest estimates all the decision trees at once so each tree is independent of every other tree. 
-    - The random forest algorithm provides a regression approach that is distinct from other modeling approaches. 
-    - The final random forest model aggregates the findings across all the separate trees in the forest
+- Random forest is an extension of decision tree modeling whereby a collection of decision trees are sequentially **estimated using training data** - and **validated/tested using testing data**
+- Different _samples_ of predictors are sampled for inclusion in each individual tree
+- Highly complex and non-linear relationships between variables can be estimated
+- Each tree is independent of every other tree  
 
----
+--
 
-![](https://miro.medium.com/max/1184/1*i0o8mjFfCn-uD79-F1Cqkw.png)&lt;!-- --&gt;
-
-[Koehrsen (2017)](https://williamkoehrsen.medium.com/random-forest-simple-explanation-377895a60d2d)
+- For classification ML, the final output is the category/group/class selected by individual trees
+- For regression ML, the mean or average prediction of the individual trees is returned
 
 ---
 
 # Tuning parameters for random forests
 
 - There are several important tuning parameters for these models:
-    - the number of predictor variables that are randomly sampled for each split in the tree (`mtry` in the code we'll run later)
-    - the number of data points required to execute a split (`min_n`)
-    - the minimum number of observations in each node (`size`)
+    - the number of predictor variables that are randomly sampled for each split (`mtry`)
+    - the minimum number of data points required to execute a split into branches (`min_n`)
+    - the number of trees estimated as a part of the "forest" (`trees`)
 - These tuning parameters, broadly, balance predictive performance with the training data with how well the model will perform on new data 
+
+---
+
+# Warning!
+
+- We're estimating _a lot_ of decision trees
+- How many? Let's say . . . 
+    - For each modeling step, we're estimating *10* folds
+    - But, we have to tune our model using a grid of size *10*
+    - Some of the sets of tuning parameters involve estimating *1000+* trees
+    
+Thus, we're fitting somewhere around 100,000 decision trees in a single attempt!
 
 ---
 
@@ -290,10 +306,9 @@ class: clear, inverse, center, middle
 ```r
 library(tidyverse)
 library(tidymodels)
-library(here)
 library(vip) # a new package we're adding for variable importance measures
 
-d &lt;- read_csv(here("data", "ngsschat-processed-data-add-three-features.csv"))
+d &lt;- read_csv("data/ngsschat-processed-data-add-three-features.csv")
 ```
 
 ]
@@ -332,9 +347,10 @@ my_rec &lt;- recipe(code ~ ., data = data_train) %&gt;%
 # specify model
 my_mod &lt;-
     rand_forest(mtry = tune(), # this specifies that we'll take steps later to tune the model
-                min_n = tune()) %&gt;%
+                min_n = tune(),
+                trees = tune()) %&gt;%
     set_engine("ranger", importance = "impurity") %&gt;%
-    set_mode("regression")
+    set_mode("classification")
 
 # specify workflow
 my_wf &lt;-
@@ -353,9 +369,11 @@ my_wf &lt;-
 # specify tuning grid
 finalize(mtry(), data_train)
 finalize(min_n(), data_train)
+finalize(trees(), data_train)
 
 tree_grid &lt;- grid_max_entropy(mtry(range(1, 18)),
                               min_n(range(2, 40)),
+                              trees(range(1, 2000)),
                               size = 10)
 
 # fit model with tune_grid
@@ -363,7 +381,8 @@ fitted_model &lt;- my_wf %&gt;%
     tune_grid(
         resamples = kfcv,
         grid = tree_grid,
-        metrics = metric_set((roc_auc, accuracy, kap, sensitivity, specificity, precision))
+        metrics = metric_set(roc_auc, accuracy, kap, sensitivity, specificity, precision)
+        )
 ```
 
 ]
@@ -381,8 +400,7 @@ show_best(fitted_model, n = 10, metric = "accuracy")
 best_tree &lt;- fitted_model %&gt;% select_best(metric = "accuracy")
 
 # finalize workflow with best set of tuning parameters
-final_wf &lt;- my_wf %&gt;% 
-    finalize_workflow(best_tree)
+final_wf &lt;- my_wf %&gt;% finalize_workflow(best_tree)
 
 final_fit &lt;- final_wf %&gt;% 
     last_fit(train_test_split, metrics = metric_set(roc_auc, accuracy, kap, sensitivity, specificity, precision))
