update in advance of the first ll

--- a/lab-1/ll-1-overview-presentation.html
+++ b/lab-1/ll-1-overview-presentation.html
@@ -4,8 +4,8 @@
     <title>Machine Learning Learning Lab 1 Overview: Prediction</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2022-07-14" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <meta name="date" content="2022-09-29" />
+    <script src="libs/header-attrs-2.16/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
@@ -37,7 +37,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning Learning Lab 1 Overview: Prediction
 ----
 ### **Dr. Joshua Rosenberg**
-### July 14, 2022
+### September 29, 2022
 
 ---
 
@@ -501,8 +501,8 @@ We used a coding frame from [van Bommel et al. (2020)](https://www.sciencedirect
 
 # In the remainder of this learning lab, you'll dive deeper
 
-- **Guided walkthrough**: You'll run all of this code, focusing on interpreting the predictions  
-- **Independent practice**: In the independent practice, you'll focus on interpreting the fit measures (agreement, Kappa, and others)  
+- **Case study**: You'll run all of this code, focusing on interpreting the predictions; walk through this slowly, as this is intended to be a gentle introduction to _all_ of the core parts of machine learning
+- **Badge**: In the independent practice, you'll focus on interpreting the fit measures (agreement, Kappa, and others)  
 
 ---
 class: clear, center
