--- a/lab-3/ll-3-overview-presentation.html
+++ b/lab-3/ll-3-overview-presentation.html
@@ -4,8 +4,8 @@
     <title>Machine Learning Learning Lab 3: Model Tuning</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dr. Joshua Rosenberg" />
-    <meta name="date" content="2022-07-15" />
-    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
+    <meta name="date" content="2023-01-15" />
+    <script src="libs/header-attrs-2.18/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
     <script src="libs/panelset-0.2.6/panelset.js"></script>
@@ -37,7 +37,7 @@ class: clear, title-slide, inverse, center, top, middle
 # Machine Learning Learning Lab 3: Model Tuning
 ----
 ### **Dr. Joshua Rosenberg**
-### July 15, 2022
+### January 15, 2023
 
 ---
 
@@ -188,8 +188,6 @@ This isn't just for beginners or those of us in education; [most spam filters us
 
 - How (in)correct our models' (algorithms') predictions are
 
---
-
 - Models with high bias can fail to capture important relationships--they can be *under-fit* to our data
 
 - In short, how well our model reflects the patterns in the data
@@ -203,8 +201,6 @@ This isn't just for beginners or those of us in education; [most spam filters us
 - *Definition*: Using a different sample of data, the difference in `\(\hat{y}\)` values
 
 - How sensitive our predictions are to the specific sample on which we trained (and tested) the model 
-
---
 
 - Models with high variance can fail to predict different data well--they can be *over-fit* to our data
 
@@ -233,6 +229,12 @@ This isn't just for beginners or those of us in education; [most spam filters us
     - For instance, here's a _very, very_ simple tree (from [APM](https://link.springer.com/book/10.1007/978-1-4614-6849-3)):
 
 
+```code
+if Predictor B &gt;= 0.197 then
+| if Predictor A &gt;= 0.13 then Class = 1
+| else Class = 2
+else Class = 2
+```
 
 - Measures are used to determine the splits in such a way that classifies observations into small, homogeneous groups (using measures such as the Gini index and entropy measure)
 
@@ -241,6 +243,13 @@ This isn't just for beginners or those of us in education; [most spam filters us
 # A more complex tree
 
 
+```code
+if Predictor B &gt;= 0.197 then
+| if Predictor A &gt;= 0.13 then
+    | if Predictor C &lt; -1.04 then Class = 1
+    | else Class = 2
+else Class = 3
+```
 
 As you can imagine, with many variables, these trees can become very complex
 
@@ -298,6 +307,8 @@ class: clear, inverse, center, middle
 
 ---
 
+# Code Examples
+
 .panelset[
 
 .panel[.panel-name[0]
@@ -346,16 +357,14 @@ my_rec &lt;- recipe(code ~ ., data = data_train) %&gt;%
  
 
 ```r
-# specify model
-my_mod &lt;-
+my_mod &lt;- # specify model
     rand_forest(mtry = tune(), # this specifies that we'll take steps later to tune the model
                 min_n = tune(),
                 trees = tune()) %&gt;%
     set_engine("ranger", importance = "impurity") %&gt;%
     set_mode("classification")
 
-# specify workflow
-my_wf &lt;-
+my_wf &lt;- # specify workflow
     workflow() %&gt;%
     add_model(my_mod) %&gt;% 
     add_recipe(my_rec)
@@ -368,8 +377,7 @@ my_wf &lt;-
 
 
 ```r
-# specify tuning grid
-finalize(mtry(), data_train)
+finalize(mtry(), data_train) # specify tuning grid
 finalize(min_n(), data_train)
 finalize(trees(), data_train)
 
@@ -378,8 +386,7 @@ tree_grid &lt;- grid_max_entropy(mtry(range(1, 18)),
                               trees(range(1, 2000)),
                               size = 10)
 
-# fit model with tune_grid
-fitted_model &lt;- my_wf %&gt;% 
+fitted_model &lt;- my_wf %&gt;% # fit model with tune_grid
     tune_grid(
         resamples = kfcv,
         grid = tree_grid,
@@ -434,12 +441,6 @@ final_fit %&gt;%
 
 - **Case study**: We'll work through this code in much more depth to tune a model
 - **Independent practice**: we'll try tuning an even more sophisticated model
-
----
-
-# Readings
-
-
 
 ---
 
